add module purchases (#2)
